--- a/package.json
+++ b/package.json
@@ -20,6 +20,11 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "@typescript-eslint/eslint-plugin": "^6.13.2",
+    "@typescript-eslint/parser": "^6.12.0",
+    "eslint": "^8",
+    "eslint-plugin-prettier": "4.2.1",
+    "prettier": "2.8.8"
   }
 }
